--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         android:theme="@style/Theme.JopFinderApp"
         tools:targetApi="31">
         <activity
-            android:name=".Homefragment"
+            android:name=".HomeFragment"
             android:exported="false" />
         <activity
             android:name=".JobsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".WelcomeActivity"
             android:exported="false" />
@@ -33,7 +34,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true"/>
     </application>
 
 </manifest>
